@@ -324,7 +324,7 @@ sed < $< \
   -e "s;%GCC_IEEE_FP_FLAG%;\"${GCC_IEEE_FP_FLAG}\";" \
   -e "s;%LDFLAGS%;\"${LDFLAGS}\";" \
   -e "s;%LIBFLAGS%;\"-L${libdir}\";" \
-  -e "s;%RLD_FLAG%;\"-L${RLD_FLAG}\";" \
+  -e "s;%RLD_FLAG%;\"${RLD_FLAG}\";" \
   -e "s;%CXXLIBS%;\"${CXXLIBS}\";" \
   -e "s;%TERMLIBS%;\"${TERMLIBS}\";" \
   -e "s;%LIBS%;\"${LIBS}\";" \
