@@ -53,12 +53,12 @@ function contour (z, n, x, y)
           x = x';
         endif
         len = 3 * ylen;
-        zz = zeros (xlen, ylen);
+        zz = zeros (xlen, len);
         k = 1;
         for i = 1:3:len
           zz(:,i)   = x;
           zz(:,i+1) = y(k) * ones (xlen, 1);
-          zz(:,i+2) = z(:,k);
+          zz(:,i+2) = z(k,:)';
           k++;
         endfor
         gset nosurface;
