@@ -1,3 +1,8 @@
+Fri Feb 21 20:38:25 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* Makeconf.in (do-subst-config-vals): Remove extra -L from
+	RLD_FLAG substitution.
+
 Thu Feb 20 02:58:05 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* Version 2.0.4 released.
